--- a/package.json
+++ b/package.json
@@ -9,24 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@mediapipe/tasks-vision": "^0.10.0",
+    "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
-    "@tabler/icons-react": "^3.22.0",
+    "@tabler/icons-react": "^3.24.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow-models/face-detection": "^1.0.3",
+    "@tensorflow-models/face-landmarks-detection": "^1.0.6",
+    "@tensorflow-models/facemesh": "^0.0.5",
+    "@tensorflow-models/hand-pose-detection": "^2.0.1",
+    "@tensorflow-models/handpose": "0.0.7",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@types/three": "^0.170.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
+    "dat.gui": "^0.7.9",
+    "face-api.js": "^0.22.2",
+    "fingerpose": "^0.1.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
-    "tailwind-merge": "^2.5.4",
-    "three": "^0.170.0"
+    "react-webcam": "^7.2.0",
+    "stats.js": "^0.17.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
+    "@types/fingerpose": "^0.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
