--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/ai-models/FaceCapture.js", "src/components/ai-models/FaceCap.js", "src/components/ai-models/lib/utils.js", "src/components/hand-models/utils.js"],
   "exclude": ["node_modules"]
 }
