--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mediapipe/tasks-vision": "^0.10.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/themes": "^3.1.6",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
+    "@reduxjs/toolkit": "^2.4.0",
     "@tabler/icons-react": "^3.24.0",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow-models/face-detection": "^1.0.3",
@@ -41,6 +44,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-webcam": "^7.2.0",
     "stats.js": "^0.17.0",
     "tailwind-merge": "^2.5.4"
