--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "dat.gui": "^0.7.9",
+    "encoding": "^0.1.13",
     "face-api.js": "^0.22.2",
     "fingerpose": "^0.1.0",
     "framer-motion": "^11.11.17",
